# JC-ESP32P4-M3-DEV-Voice-Assistant-V2

./: .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  CRASH_FIX_APPLIED.txt  GEMINI.md  GETTING_STARTED.md  HA_INTEGRATION.txt  MQTT_INTEGRATION.md  README.md  START_HERE.txt  SUMMARY.md  TECHNICAL_SPECIFICATIONS.md  TODO_OLED_STATUS_DISPLAY.md  WAKENET_SD_CARD_SETUP.md  WIFI_IMPLEMENTATION.txt  WWD_INTEGRATION_PLAN.md  WWD_PROGRESS.md  build.bat  build.py  build.sh  flash.bat  flash.py  ota_server.bat  partitions.csv  quick_build.bat  quick_flash.bat  sdkconfig  simple_build.py
.claude/: settings.local.json
common_components/bsp_extra/include/: bsp_board_extra.h
common_components/bsp_extra/src/: bsp_board_extra.c
help_scripts/: check_ha_logs.py  check_ha_logs_from_config.py  home_assistant_mcp.md  list_ha_states_from_config.py  test_ha_api_direct.py  test_websocket.py
main/: CMakeLists.txt  alarm_manager.c  alarm_manager.h  audio_capture.c  audio_capture.h  audio_ref_buffer.c  audio_ref_buffer.h  config.h.example  ha_client.c  ha_client.h  idf_component.yml  led_status.c  led_status.h  local_music_player.c  local_music_player.h  main.c  mp3_player.c  mqtt_ha.c  network_manager.c  network_manager.h  oled_status.c  oled_status.h  ota_update.c  sdcard_manager.c  sdcard_manager.h  settings_manager.c  settings_manager.h  sys_diag.c  sys_diag.h  timer_manager.c  timer_manager.h  tts_player.c  tts_player.h  vad.c  vad.h  voice_pipeline.c  voice_pipeline.h  webserial.c  webserial.h  wifi_manager.c  (+1 more)
